// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorScript test set currentSceneTreeNode test script attribute test add script attribute show script attribute group for add show all unused ones 1`] = `
<article
  className="wonder-inspector-script"
>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script event function
  </button>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Add Script Attribute
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          New Script Attribute
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script Attribute 1
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
  <div>
    <div
      className="inspector-item"
    >
      <div
        className="item-header"
        title="script attribute asset in use"
      >
        Script Attribute
      </div>
      <div
        className="item-content"
      >
        <div
          className="inspector-select"
        >
          <div
            className="select-name"
            onClick={[Function]}
          >
            New Script Attribute
          </div>
          <div
            className="select-img"
            onClick={[Function]}
          >
            <img
              src="./public/img/select.png"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      className="scriptAttribute-remove"
      onClick={[Function]}
    >
      Remove
    </button>
    <div
      className="scriptAttribute-fields"
    />
  </div>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script attribute
  </button>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script attribute test change script attribute show script attribute group for change should contain self and all unused ones 1`] = `
<article
  className="wonder-inspector-script"
>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script event function
  </button>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Change Script Attribute
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          New Script Attribute
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script Attribute 1
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
  <div>
    <div
      className="inspector-item"
    >
      <div
        className="item-header"
        title="script attribute asset in use"
      >
        Script Attribute
      </div>
      <div
        className="item-content"
      >
        <div
          className="inspector-select"
        >
          <div
            className="select-name"
            onClick={[Function]}
          >
            New Script Attribute
          </div>
          <div
            className="select-img"
            onClick={[Function]}
          >
            <img
              src="./public/img/select.png"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      className="scriptAttribute-remove"
      onClick={[Function]}
    >
      Remove
    </button>
    <div
      className="scriptAttribute-fields"
    />
  </div>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script attribute
  </button>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script attribute test change script attribute test change script attribute group should be sorted 1`] = `
<article
  className="wonder-inspector-script"
>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script event function
  </button>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Change Script Attribute
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script Attribute
        </div>
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          New Script Attribute 1
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script Attribute 2
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
  <div>
    <div
      className="inspector-item"
    >
      <div
        className="item-header"
        title="script attribute asset in use"
      >
        Script Attribute
      </div>
      <div
        className="item-content"
      >
        <div
          className="inspector-select"
        >
          <div
            className="select-name"
            onClick={[Function]}
          >
            New Script Attribute 1
          </div>
          <div
            className="select-img"
            onClick={[Function]}
          >
            <img
              src="./public/img/select.png"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      className="scriptAttribute-remove"
      onClick={[Function]}
    >
      Remove
    </button>
    <div
      className="scriptAttribute-fields"
    />
  </div>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script attribute
  </button>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script attribute test script attribute field show attribute's fields 1`] = `
<article
  className="wonder-inspector-script"
>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script event function
  </button>
  <div>
    <div
      className="inspector-item"
    >
      <div
        className="item-header"
        title="script attribute asset in use"
      >
        Script Attribute
      </div>
      <div
        className="item-content"
      >
        <div
          className="inspector-select"
        >
          <div
            className="select-name"
            onClick={[Function]}
          >
            New Script Attribute
          </div>
          <div
            className="select-img"
            onClick={[Function]}
          >
            <img
              src="./public/img/select.png"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      className="scriptAttribute-remove"
      onClick={[Function]}
    >
      Remove
    </button>
    <div
      className="scriptAttribute-fields"
    >
      <div
        className="scriptAttribute-field"
      >
        <div
          className="text"
        >
          <span
            className="text-header"
            title="field's name"
          >
            Field Name
          </span>
          <span
            className="text-body"
          >
            New Script Attribute Field
          </span>
        </div>
        <div
          className="text"
        >
          <span
            className="text-header"
            title="field's type"
          >
            Type
          </span>
          <span
            className="text-body"
          >
            float
          </span>
        </div>
        <article
          className="inspector-item wonder-float-input"
        >
          <div
            className="item-header component-label"
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseUp={[Function]}
            title="field's default value"
          >
            Default Value
          </div>
          <div
            className="item-content"
          >
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="0"
            />
          </div>
        </article>
      </div>
    </div>
  </div>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script attribute
  </button>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script attribute test script attribute field test set field's defaultValue test show attribute's fields 1`] = `
<article
  className="wonder-inspector-script"
>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script event function
  </button>
  <div>
    <div
      className="inspector-item"
    >
      <div
        className="item-header"
        title="script attribute asset in use"
      >
        Script Attribute
      </div>
      <div
        className="item-content"
      >
        <div
          className="inspector-select"
        >
          <div
            className="select-name"
            onClick={[Function]}
          >
            New Script Attribute
          </div>
          <div
            className="select-img"
            onClick={[Function]}
          >
            <img
              src="./public/img/select.png"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      className="scriptAttribute-remove"
      onClick={[Function]}
    >
      Remove
    </button>
    <div
      className="scriptAttribute-fields"
    >
      <div
        className="scriptAttribute-field"
      >
        <div
          className="text"
        >
          <span
            className="text-header"
            title="field's name"
          >
            Field Name
          </span>
          <span
            className="text-body"
          >
            New Script Attribute Field
          </span>
        </div>
        <div
          className="text"
        >
          <span
            className="text-header"
            title="field's type"
          >
            Type
          </span>
          <span
            className="text-body"
          >
            float
          </span>
        </div>
        <article
          className="inspector-item wonder-float-input"
        >
          <div
            className="item-header component-label"
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseUp={[Function]}
            title="field's default value"
          >
            Default Value
          </div>
          <div
            className="item-content"
          >
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="1.1"
            />
          </div>
        </article>
      </div>
    </div>
  </div>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script attribute
  </button>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script event function test add script event function show script event function group for add show all unused ones 1`] = `
<article
  className="wonder-inspector-script"
>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Add Script eventFunction
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          New Script EventFunction
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script EventFunction 1
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
  <div>
    <div
      className="inspector-item"
    >
      <div
        className="item-header"
        title="script event function asset in use"
      >
        Script Event Function
      </div>
      <div
        className="item-content"
      >
        <div
          className="inspector-select"
        >
          <div
            className="select-name"
            onClick={[Function]}
          >
            New Script EventFunction
          </div>
          <div
            className="select-img"
            onClick={[Function]}
          >
            <img
              src="./public/img/select.png"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      className="scriptEventFunction-remove"
      onClick={[Function]}
    >
      Remove
    </button>
  </div>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script event function
  </button>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script attribute
  </button>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script event function test change script event function show script event function group for change should contain self and all unused ones 1`] = `
<article
  className="wonder-inspector-script"
>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Change Script eventFunction
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          New Script EventFunction
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script EventFunction 1
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
  <div>
    <div
      className="inspector-item"
    >
      <div
        className="item-header"
        title="script event function asset in use"
      >
        Script Event Function
      </div>
      <div
        className="item-content"
      >
        <div
          className="inspector-select"
        >
          <div
            className="select-name"
            onClick={[Function]}
          >
            New Script EventFunction
          </div>
          <div
            className="select-img"
            onClick={[Function]}
          >
            <img
              src="./public/img/select.png"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      className="scriptEventFunction-remove"
      onClick={[Function]}
    >
      Remove
    </button>
  </div>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script event function
  </button>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script attribute
  </button>
</article>
`;

exports[`MainEditorScript test set currentSceneTreeNode test script event function test change script event function test change script event function group should be sorted 1`] = `
<article
  className="wonder-inspector-script"
>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Change Script eventFunction
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script EventFunction
        </div>
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          New Script EventFunction 1
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          New Script EventFunction 2
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
  <div>
    <div
      className="inspector-item"
    >
      <div
        className="item-header"
        title="script event function asset in use"
      >
        Script Event Function
      </div>
      <div
        className="item-content"
      >
        <div
          className="inspector-select"
        >
          <div
            className="select-name"
            onClick={[Function]}
          >
            New Script EventFunction 1
          </div>
          <div
            className="select-img"
            onClick={[Function]}
          >
            <img
              src="./public/img/select.png"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      className="scriptEventFunction-remove"
      onClick={[Function]}
    >
      Remove
    </button>
  </div>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script event function
  </button>
  <button
    className="addable-btn"
    onClick={[Function]}
  >
    Add script attribute
  </button>
</article>
`;
